<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout android:id="@+id/top" style="@style/TitleBar" android:weightSum="100">

        <ImageView style="@style/TitleBarSeparator" />

        <EditText android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="80"
             />

        <ImageButton
            style="@style/TitleBarAction"
            android:onClick="settings"
            android:src="@drawable/bombalogob" android:layout_weight="20" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btSearchTracks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tracks" />

        <Button
            android:id="@+id/btSearchArtists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/artist" />
        <Button
            android:id="@+id/btSearchPlaylists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/playlists" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    

</LinearLayout>